v.0.4.1 fixed newsline height on mobile devices

--- a/style.css
+++ b/style.css
@@ -793,4 +793,9 @@ a {
 		align-items: center;
 		margin-bottom: 20px;
 	}
+
+	.current-news {
+		display: block;
+		min-height: 40px;
+	}
 }
